--- a/app/src/main/res/layout/pizza_views.xml
+++ b/app/src/main/res/layout/pizza_views.xml
@@ -3,20 +3,21 @@
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<ImageView android:id="@+id/pizzaImg_1"
-		android:layout_width="250dp"
-		android:layout_height="250dp"
+		android:layout_width="@dimen/pizzaImgSize"
+		android:layout_height="@dimen/pizzaImgSize"
 		android:layout_marginTop="24dp"
 		android:contentDescription="@null"
 
-		app:layout_constraintTop_toBottomOf="@id/tvPizzaChip"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="@id/pizzaViewsBounds"
+		app:layout_constraintBottom_toBottomOf="@id/pizzaViewsBounds"
+		app:layout_constraintEnd_toEndOf="@id/pizzaViewsBounds"
+		app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
 
 		/>
 
 	<ImageView android:id="@+id/pizzaImg_2"
-		android:layout_width="250dp"
-		android:layout_height="250dp"
+		android:layout_width="@dimen/pizzaImgSize"
+		android:layout_height="@dimen/pizzaImgSize"
 		android:layout_marginTop="24dp"
 		android:contentDescription="@null"
 
@@ -24,15 +25,16 @@
 		app:layout_constraintCircleRadius="300dp"
 		app:layout_constraintCircleAngle="120"
 
-		app:layout_constraintTop_toBottomOf="@id/tvPizzaChip"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="@id/pizzaViewsBounds"
+		app:layout_constraintBottom_toBottomOf="@id/pizzaViewsBounds"
+		app:layout_constraintEnd_toEndOf="@id/pizzaViewsBounds"
+		app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
 
 		/>
 
 	<ImageView android:id="@+id/pizzaImg_3"
-		android:layout_width="250dp"
-		android:layout_height="250dp"
+		android:layout_width="@dimen/pizzaImgSize"
+		android:layout_height="@dimen/pizzaImgSize"
 		android:layout_marginTop="24dp"
 		android:contentDescription="@null"
 
@@ -40,15 +42,16 @@
 		app:layout_constraintCircleRadius="500dp"
 		app:layout_constraintCircleAngle="120"
 
-		app:layout_constraintTop_toBottomOf="@id/tvPizzaChip"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="@id/pizzaViewsBounds"
+		app:layout_constraintBottom_toBottomOf="@id/pizzaViewsBounds"
+		app:layout_constraintEnd_toEndOf="@id/pizzaViewsBounds"
+		app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
 
 		/>
 
 	<ImageView android:id="@+id/pizzaImg_4"
-		android:layout_width="250dp"
-		android:layout_height="250dp"
+		android:layout_width="@dimen/pizzaImgSize"
+		android:layout_height="@dimen/pizzaImgSize"
 		android:layout_marginTop="24dp"
 		android:contentDescription="@null"
 
@@ -56,15 +59,16 @@
 		app:layout_constraintCircleRadius="500dp"
 		app:layout_constraintCircleAngle="120"
 
-		app:layout_constraintTop_toBottomOf="@id/tvPizzaChip"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="@id/pizzaViewsBounds"
+		app:layout_constraintBottom_toBottomOf="@id/pizzaViewsBounds"
+		app:layout_constraintEnd_toEndOf="@id/pizzaViewsBounds"
+		app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
 
 		/>
 
 	<ImageView android:id="@+id/pizzaImg_5"
-		android:layout_width="250dp"
-		android:layout_height="250dp"
+		android:layout_width="@dimen/pizzaImgSize"
+		android:layout_height="@dimen/pizzaImgSize"
 		android:layout_marginTop="24dp"
 		android:contentDescription="@null"
 
@@ -72,9 +76,10 @@
 		app:layout_constraintCircleRadius="500dp"
 		app:layout_constraintCircleAngle="120"
 
-		app:layout_constraintTop_toBottomOf="@id/tvPizzaChip"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="@id/pizzaViewsBounds"
+		app:layout_constraintBottom_toBottomOf="@id/pizzaViewsBounds"
+		app:layout_constraintEnd_toEndOf="@id/pizzaViewsBounds"
+		app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
 
 		/>
 
